# leading-index-evaluation

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: backtest.yml  checklist.yml  composites.yml  dashboard.yml  macro_regimes.yml  regimes.yml  sources.yml  transforms.yml  universe.yml
data/: README.md
data/constituents/: nasdaq_constituents.csv  nyse_constituents.csv  russell1000_constituents.csv  russell2000_constituents.csv  sp400_constituents.csv  sp600_constituents.csv
docs/: METHODOLOGY.md
risk_index/: __init__.py
risk_index/core/: __init__.py  config_schema.py  constants.py  exceptions.py  logger.py  types.py  utils_dates.py  utils_io.py  utils_math.py
risk_index/pipeline/: __init__.py  blocks_build.py  breadth_fetch.py  checklist_build.py  clean_align.py  composite_build.py  features_build.py  fetch.py  investment_clock_fetch.py  regimes_build.py  risk_matrix_fetch.py  treasury_fetch.py
risk_index/reporting/: attribution.py  charts.py  dashboard.py  excel_export.py  report_html.py
risk_index/research/: __init__.py  backtest_regimes.py  feature_selection.py  lead_lag.py  walk_forward.py  weight_optimization.py
risk_index/sources/: __init__.py  base.py  fiscal_data.py  fred.py  yahoo.py
scripts/: __init__.py  run_dashboard.py  run_report.py  run_research.py  run_update.py
tasks/: lessons.md  todo.md
tests/: __init__.py  test_config_schema.py
